admission/ValidatingAdmissionPolicy/policies/run-as-group/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-run-as-group-pod
  annotations:
    kubeapt.io/uuid: "3b7b754a-0c21-4bf4-bbb4-aaed4b8a5e91"
spec:
  securityContext:
    runAsGroup: 0
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
